--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <header>
+      <div class="nav-bar h-15 bg-gray-800">
+        <div class="nav">
+          <div class="logo p-20">LOGO</div>
+        </div>
+      </div>
+    </header>
+
+    
     <script type="module" src="/main.js"></script>
   </body>
 </html>
