--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Email" type="text">
                 <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Password"  type="text">
                 <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Confirm Password"  type="text">
-                <button class="w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500">SIGN IN</button>
+                <a href="./homepage.html"><button class="w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500">SIGN IN</button></a>
               </div>
             </div>
           </div>
