--- a/profile.html
+++ b/profile.html
@@ -56,7 +56,7 @@
                         <span>38</span>
                     </div>
                     <div class="following font-light">
-                        <span>Followers</span>
+                        <span>Following</span>
                     </div>
                     <div class="Message-btn">
                         <button class="w-20 h-6 text-sm md:text-lg md:w-36 md:h-8 bg-secondary rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500">MESSAGE</button>
