fixed with on log in and sign up form

--- a/homepage.html
+++ b/homepage.html
@@ -91,8 +91,11 @@
                   </div>
                 </div>
               </div>
-              <div class="div">
+              <div class="div flex flex-row">
                 <H1 class="text-white text-3xl mb-10">Welcome back, Thomas!</H1>
+                <div class="wave ml-2 animate-bounce">
+                    <img src="./img/wave.png" alt="">
+                </div>
             </div>
             <div class="text-input max-w-2xl">
                 <input class="bg-primary text-white" type="text" placeholder="What do you want to say">
