--- a/index.html
+++ b/index.html
@@ -22,39 +22,41 @@
       </div>
     </header>
     <main class="">
-      <div class="container md:flex md:justify-center m-auto md:max-w-md">
-        <div class="login-container p-4">
-          <h1 class="text-white text-4xl text-center p-3">LOG IN</h1>
-          <div class="login-form text-center md:max-w-xs">
-            <input class="w-72 h-10 rounded my-2 p-2 bg-input-color text-white" placeholder="Email" type="text">
-            <input class="w-72 h-10 rounded my-2 p-2 bg-input-color text-white" placeholder="Password"  type="text">
-            <a href="./homepage.html"><button class="w-36 h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500">LOG IN</button></a>
-          </div>
-        </div>
-        <hr class="mx-6 border-gray-200 my-auto dark:border-gray-700 mx-8">
-        <div class="signup-container text-center text-white p-4">
-          <h1 class="text-4xl text-center p-3">SIGN UP</h1>
-          <button class="w-72 h-10 bg-main-text rounded text-xl mt-5 mb-5 hover:bg-hover-btn duration-500" id="modal">CREATE ACCOUNT</button>
-          <div class="b bg-black bg-opacity-50 absolute inset-0 hidden justify-center items-center" id="overlay">
-            <div class="bg-grey-200 rounded">
-              <div class="bg-secondary p-10 mx-4 rounded md:max-w-md">
-                <h1 class="mb-3">CREATE ACCOUNT</h1>
-                <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Email" type="text">
-                <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Password"  type="text">
-                <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Confirm Password"  type="text">
-                <a href="./homepage.html"><button class="w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500">SIGN IN</button></a>
-              </div>
+      <div class="main-container md:h-screen flex m-0 justify-center items-center">
+        <div class="container md:flex md:justify-center m-auto md:max-w-md">
+          <div class="login-container p-4">
+            <h1 class="text-white text-4xl text-center p-3">LOG IN</h1>
+            <div class="login-form text-center max-w-xs flex flex-col justify-center m-auto">
+              <input class="w-72 h-10 rounded my-2 p-2 bg-input-color text-white" placeholder="Email" type="text">
+              <input class="w-72 h-10 rounded my-2 p-2 bg-input-color text-white" placeholder="Password"  type="text">
+              <a href="./homepage.html"><button class="w-36 h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500">LOG IN</button></a>
             </div>
           </div>
-          <h2>With</h2>
-          <div class="social-container text-center m-0">
-            <button class="gmail w-72 bg-input-color rounded text-xl my-2 p-2 hover:bg-hover-btn duration-500">
-              <img class="m-auto" src="./img/gmail.png" alt=""></button>
-            <button class="facebook w-72 bg-input-color rounded text-xl my-2 p-2 hover:bg-hover-btn duration-500">
-              <img class="m-auto" src="./img/facebook (2).png" alt=""></button>
-            <button class="linkedin w-72 bg-input-color rounded text-xl my-2 p-2 hover:bg-hover-btn duration-500">
-              <img class="m-auto" src="./img/linkedin.png" alt="">
-            </button>
+          <hr class="mx-6 border-gray-200 my-auto dark:border-gray-700 mx-8">
+          <div class="signup-container text-center text-white p-4 max-w-xs flex flex-col justify-center m-auto">
+            <h1 class="text-4xl text-center p-3">SIGN UP</h1>
+            <button class="w-72 h-10 bg-main-text rounded text-xl mt-5 mb-5 hover:bg-hover-btn duration-500" id="modal">CREATE ACCOUNT</button>
+            <div class="b bg-black bg-opacity-50 absolute inset-0 hidden justify-center items-center" id="overlay">
+              <div class="bg-grey-200 rounded">
+                <div class="bg-secondary p-10 mx-4 rounded max-w-md flex flex-col justify-center m-auto">
+                  <h1 class="mb-3">CREATE ACCOUNT</h1>
+                  <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Email" type="text">
+                  <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Password"  type="text">
+                  <input class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white" placeholder="Confirm Password"  type="text">
+                  <a href="./homepage.html"><button class="w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500">SIGN IN</button></a>
+                </div>
+              </div>
+            </div>
+            <h2>With</h2>
+            <div class="social-container text-center m-0">
+              <button class="gmail w-72 bg-input-color rounded text-xl my-2 p-2 hover:bg-hover-btn duration-500">
+                <img class="m-auto" src="./img/gmail.png" alt=""></button>
+              <button class="facebook w-72 bg-input-color rounded text-xl my-2 p-2 hover:bg-hover-btn duration-500">
+                <img class="m-auto" src="./img/facebook (2).png" alt=""></button>
+              <button class="linkedin w-72 bg-input-color rounded text-xl my-2 p-2 hover:bg-hover-btn duration-500">
+                <img class="m-auto" src="./img/linkedin.png" alt="">
+              </button>
+            </div>
           </div>
         </div>
       </div>
