--- a/homepage.html
+++ b/homepage.html
@@ -24,10 +24,10 @@
               </div>
               <ul class="md:flex md:items-center z-[-1] md:z-auto md:static absolute bg-secondary w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500">
                <li class="mx-4 my-6 md:my-0">
-                 <a href="./profile.html" class="text-xl text-white hover:text-main-text duration-500">PROFILE</a>
+                 <a href="./profile.html" class="text-md text-white hover:text-main-text duration-500">PROFILE</a>
                </li>
                <li class="mx-4 my-6 md:my-0">
-                 <a href="./index.html" class="text-xl text-white"><button class="bg-main-text p-2 rounded hover:bg-hover-btn duration-500">SIGN OUT</button></a>
+                 <a href="./index.html" class="text-md text-white"><button class="bg-main-text p-2 rounded hover:bg-hover-btn duration-500">SIGN OUT</button></a>
                </li>
               </ul>
              </nav>
