--- a/index.html
+++ b/index.html
@@ -111,89 +111,73 @@
             >
               SIGN UP
             </h1>
-<<<<<<< Updated upstream
-           <form action="" id="signup-form" class="signup-form text-center max-w-xs flex flex-col justify-center m-auto">
-            <input
-            id="first-name"
-            class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-            placeholder="First name"
-            type="text"
-          />
-          <span
-                    id="first-name-error"
-                    class="hidden text-sm text-red-500">
-                Please enter your first name</span>
-            <input
-            id="email"
-            class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-            placeholder="Email"
-            type="text"
-          />
-          <span
-           id="email-not-valid"
-           class="hidden text-sm text-red-500">
-            Email is not valid must be a valid stud.noroff.no or noroff.no email address
-          </span>
-          <span
-            id="email-error"
-            class="hidden text-sm text-red-500">
-             Email is required
-           </span>
-          <input
-            id="password"
-            class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-            placeholder="Password"
-            type="text"
-          />
-          <span
-            id="password-error"
-            class="hidden text-sm text-red-500">
-             Password must be over 6 characters
-          </span>
-          <input
-            id="confirm-password"
-            class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-            placeholder="Confirm Password"
-            type="text"
-          />
-          <span
-            id="confirm-password-matching"
-            class="hidden text-sm text-red-500">
-             Passwords doesn't match
-          </span>
-          <span
-            id="confirm-password-error"
-            class="hidden text-sm text-red-500">
-             Password must be over 6 characters
-          </span>
-          <a href="./homepage.html"
-            ><button
-              class="w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500"
-            >
-              SIGN IN
-            </button></a>
-           </form>
-           <p id="general-error-message" class="capitalize text-3xl text-yellow-500"></p>
-=======
             <form
               action=""
+              id="signup-form"
               class="signup-form text-center max-w-xs flex flex-col justify-center m-auto"
             >
               <input
+                id="first-name"
+                class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
+                placeholder="First name"
+                type="text"
+              />
+              <span
+                id="first-name-error"
+                class="hidden text-sm text-red-500"
+              >
+                Please enter your first name</span
+              >
+              <input
+                id="email"
                 class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
                 placeholder="Email"
                 type="text"
               />
+              <span
+                id="email-not-valid"
+                class="hidden text-sm text-red-500"
+              >
+                Email is not valid must be a valid
+                stud.noroff.no or noroff.no email
+                address
+              </span>
+              <span
+                id="email-error"
+                class="hidden text-sm text-red-500"
+              >
+                Email is required
+              </span>
               <input
+                id="password"
                 class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
                 placeholder="Password"
                 type="text"
               />
+              <span
+                id="password-error"
+                class="hidden text-sm text-red-500"
+              >
+                Password must be over 6 characters
+              </span>
               <input
+                id="confirm-password"
                 class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
                 placeholder="Confirm Password"
                 type="text"
               />
+              <span
+                id="confirm-password-matching"
+                class="hidden text-sm text-red-500"
+              >
+                Passwords doesn't match
+              </span>
+              <span
+                id="confirm-password-error"
+                class="hidden text-sm text-red-500"
+              >
+                Password must be over 6 characters
+              </span>
               <a href="./homepage.html"
                 ><button
                   class="w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500"
@@ -202,7 +186,10 @@
                 </button></a
               >
             </form>
->>>>>>> Stashed changes
+            <p
+              id="general-error-message"
+              class="capitalize text-3xl text-yellow-500"
+            ></p>
           </div>
         </div>
       </div>
