changes to different js, and fixed index and HP

--- a/index.html
+++ b/index.html
@@ -24,25 +24,7 @@
     <script src="./js/signup.js" defer></script>
   </head>
   <body class="bg-primary">
-    <header>
-      <div
-        class="nav-container relative z-10 w-full shadow-sm bg-secondary"
-      >
-        <nav
-          class="p-5 bg-secondary shadow md:flex md:items-center md:justify-between w-full max-w-screen-lg px-5 mx-auto sticky top-0"
-        >
-          <div
-            class="flex justify-between items-center"
-          >
-            <span
-              class="text-4xl text-main-text cursor-pointer"
-            >
-              NERDS
-            </span>
-          </div>
-        </nav>
-      </div>
-    </header>
+    <header></header>
     <main class="">
       <div
         class="main-container md:h-screen flex m-0 justify-center items-center"
@@ -245,8 +227,8 @@
       />
       <span
         class="block text-sm text-gray-500 sm:text-center dark:text-gray-400"
-        >© 2022 Christoffer Brendemo. School
-        Project.
+        >© 2022 Christoffer Brendemo & Snorre
+        Kolnes Røgenes. School Project.
       </span>
     </footer>
     <script
