Header.js, Createpost.js, main.js and html

--- a/homepage.html
+++ b/homepage.html
@@ -29,177 +29,13 @@
         class="flex text-sm bg-blue-100"
       ></div>
     </header>
+
     <main>
       <div id="welcome-name"></div>
       <div
+        id="main-header"
         class="post-form flex flex-col items-center m-auto p-5 mt-24"
-      >
-        <div
-          id="modal"
-          class="friends cursor-pointer bg-main-text shadow-lg rounded-full w-20 h-20 m-auto items-center grid fixed top-3/4 left-3/4 hover:bg-hover-btn duration-500"
-        >
-          <img
-            class="items-center m-auto pb-1"
-            src="./img/friends.png"
-            alt=""
-          />
-        </div>
-        <div
-          class="b bg-black bg-opacity-50 inset-0 hidden justify-center items-center fixed"
-          id="overlay"
-        >
-          <div class="bg-grey-200 rounded">
-            <div
-              class="bg-secondary p-10 mx-4 rounded md:max-w-md text-white max-h-3/4"
-            >
-              <h1 class="mb-3 text-bold text-2xl">
-                ACTIVE
-              </h1>
-              <div
-                class="friends flex text-center items-center space-x-5"
-              >
-                <div class="profile-picture p-2">
-                  <img
-                    class="rounded-full w-10 h-10"
-                    src="./img/pexels-thyrone-paas-1722198.jpg"
-                    alt=""
-                  />
-                </div>
-                <div class="name text-light">
-                  Thomas Kilen
-                </div>
-                <div class="btn">
-                  <button
-                    class="px-2 h-6 text-sm md:text-lg md:w-36 md:h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500"
-                  >
-                    MESSAGE
-                  </button>
-                </div>
-              </div>
-              <div
-                class="friends flex text-center items-center space-x-5"
-              >
-                <div class="profile-picture p-2">
-                  <img
-                    class="rounded-full w-10 h-10"
-                    src="./img/pexels-thyrone-paas-1722198.jpg"
-                    alt=""
-                  />
-                </div>
-                <div class="name text-light">
-                  Thomas Kilen
-                </div>
-                <div class="btn">
-                  <button
-                    class="px-2 h-6 text-sm md:text-lg md:w-36 md:h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500"
-                  >
-                    MESSAGE
-                  </button>
-                </div>
-              </div>
-              <div
-                class="friends flex text-center items-center space-x-5"
-              >
-                <div class="profile-picture p-2">
-                  <img
-                    class="rounded-full w-10 h-10"
-                    src="./img/pexels-thyrone-paas-1722198.jpg"
-                    alt=""
-                  />
-                </div>
-                <div class="name text-light">
-                  Thomas Kilen
-                </div>
-                <div class="btn">
-                  <button
-                    class="px-2 h-6 text-sm md:text-lg md:w-36 md:h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500"
-                  >
-                    MESSAGE
-                  </button>
-                </div>
-              </div>
-              <div
-                class="friends flex text-center items-center space-x-5"
-              >
-                <div class="profile-picture p-2">
-                  <img
-                    class="rounded-full w-10 h-10"
-                    src="./img/pexels-thyrone-paas-1722198.jpg"
-                    alt=""
-                  />
-                </div>
-                <div class="name text-light">
-                  Thomas Kilen
-                </div>
-                <div class="btn">
-                  <button
-                    class="px-2 h-6 text-sm md:text-lg md:w-36 md:h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500"
-                  >
-                    MESSAGE
-                  </button>
-                </div>
-              </div>
-              <div
-                class="friends flex text-center items-center space-x-5"
-              >
-                <div class="profile-picture p-2">
-                  <img
-                    class="rounded-full w-10 h-10"
-                    src="./img/pexels-thyrone-paas-1722198.jpg"
-                    alt=""
-                  />
-                </div>
-                <div class="name text-light">
-                  Thomas Kilen
-                </div>
-                <div class="btn">
-                  <button
-                    class="px-2 h-6 text-sm md:text-lg md:w-36 md:h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500"
-                  >
-                    MESSAGE
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="div flex flex-row">
-          <div class="wave ml-2 animate-bounce">
-            <img src="./img/wave.png" alt="" />
-          </div>
-        </div>
-        <div class="text-input max-w-2xl">
-          <input
-            class="bg-primary text-white"
-            type="text"
-            placeholder="What do you want to say"
-          />
-        </div>
-        <hr
-          class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8 max-w-lg"
-        />
-        <div class="attachment flex space-x-20">
-          <div class="attach flex space-x-5">
-            <div class="video">
-              <img src="./img/video.png" alt="" />
-            </div>
-            <div class="img">
-              <img
-                src="./img/Picture.png"
-                alt=""
-              />
-            </div>
-            <div class="link">
-              <img src="./img/Link.png" alt="" />
-            </div>
-          </div>
-          <button
-            class="h-6 w-12 m-auto text-sm md:text-sm md:w-20 md:h-6 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500"
-          >
-            POST
-          </button>
-        </div>
-      </div>
+      ></div>
       <div
         class="posts p-5 md:max-w-xl flex flex-col items-center text-white m-auto"
       >
