getpost.js, getpostbyid and api

--- a/createPost.html
+++ b/createPost.html
@@ -81,6 +81,16 @@
               Characters
             </span>
           </div>
+          <div
+            class="media-post w-full items-center text-center"
+          >
+            <input
+              type="file"
+              name="media"
+              id="media-post"
+              placeholder="Choose Your Media Files"
+            />
+          </div>
           <button
             class="justify-center inline-flex items-center m-auto w-40 rounded-md border border-main-text mt-6 bg-gradient-to-r from-hover-btn to-main-text hover:from-main-text hover:duration-300 hover:to-hover-btn px-4 py-4 text-sm font-medium text-white shadow-sm"
             type="submit"
