--- a/index.html
+++ b/index.html
@@ -1,309 +1,263 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-    <script src="./js/signup.js" defer></script>
-  </head>
-  <body class="bg-primary">
-    <header>
+<html lang='en'>
+<head>
+  <meta charset='UTF-8' />
+  <link
+    rel='icon'
+    type='image/svg+xml'
+    href='/vite.svg'
+  />
+  <meta
+    name='viewport'
+    content='width=device-width, initial-scale=1.0'
+  />
+  <title>Vite App</title>
+  <link rel='stylesheet' href='./style.css' />
+  <script
+    type='module'
+    src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js'
+  ></script>
+  <script
+    nomodule
+    src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js'
+  ></script>
+  <script type='module' src='./js/login.js' defer></script>
+  <script type='module' src='./js/signup.js' defer></script>
+  <script type='module' src='./main.js' defer></script>
+
+</head>
+<body class='bg-primary'>
+<header>
+  <div
+    class='nav-container relative z-10 w-full shadow-sm bg-secondary'
+  >
+    <nav
+      class='p-5 bg-secondary shadow md:flex md:items-center md:justify-between w-full max-w-screen-lg px-5 mx-auto sticky top-0'
+    >
       <div
-        class="nav-container relative z-10 w-full shadow-sm bg-secondary"
+        class='flex justify-between items-center'
       >
-        <nav
-          class="p-5 bg-secondary shadow md:flex md:items-center md:justify-between w-full max-w-screen-lg px-5 mx-auto sticky top-0"
-        >
-          <div
-            class="flex justify-between items-center"
-          >
             <span
-              class="text-4xl text-main-text cursor-pointer"
+              class='text-4xl text-main-text cursor-pointer'
             >
               NERDS
             </span>
-          </div>
-        </nav>
       </div>
-    </header>
-    <main class="">
-      <div
-        class="main-container md:h-screen flex m-0 justify-center items-center"
-      >
-        <div
-          class="container md:flex md:justify-center m-auto md:max-w-md"
+    </nav>
+  </div>
+</header>
+<main>
+  <div
+    class='main-container md:h-screen flex m-0 justify-center items-center'
+  >
+    <div
+      class='container md:flex md:justify-center m-auto md:max-w-md'
+    >
+      <div class='login-container p-4'>
+        <h1
+          class='text-white text-4xl text-center p-3'
         >
-          <div class="login-container p-4">
-            <h1
-              class="text-white text-4xl text-center p-3"
+          LOG IN
+        </h1>
+        <form
+          id='login-content'
+          class='login-form text-center max-w-xs flex flex-col justify-center m-auto'
+        >
+          <label for='user-email'></label>
+          <input
+            id='user-email'
+            class='w-72 h-10 rounded my-2 p-2 bg-input-color text-white'
+            placeholder='Email'
+            type='text'
+          />
+          <p
+            id='mail-error'
+            class='text-lg text-gray-50 hidden'
+          >
+            must contain email
+          </p>
+          <p
+            id='email-validation'
+            class='text-lg text-gray-50 hidden'
+          >
+            email is not valid
+          </p>
+          <label for='password-input'>
+          </label>
+          <input
+            id='password-input'
+            class='w-72 h-10 rounded my-2 p-2 bg-input-color text-white'
+            placeholder='Password'
+            type='text'
+          />
+          <p
+            id='user-password-error'
+            class='text-lg text-gray-50 hidden'
+          >
+            Password is required, and must
+            contain 6 characters
+          </p>
+          <a>
+            <button
+              id='loginButton-1'
+              class='w-36 h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500'
+              type='submit'
             >
               LOG IN
-            </h1>
-            <form
-              id="login-content"
-              class="login-form text-center max-w-xs flex flex-col justify-center m-auto"
-            >
-              <input
-                id="email"
-                class="w-72 h-10 rounded my-2 p-2 bg-input-color text-white"
-                placeholder="Email"
-                type="text"
-              />
-              <p
-                id="mail-error"
-                class="text-lg text-gray-50 hidden"
-              >
-                must contain email
-              </p>
-              <p
-                id="email-valitation"
-                class="text-lg text-gray-50 hidden"
-              >
-                email is not valid
-              </p>
-              <input
-                id="password-input"
-                class="w-72 h-10 rounded my-2 p-2 bg-input-color text-white"
-                placeholder="Password"
-                type="text"
-              />
-              <p
-                id="password-error"
-                class="text-lg text-gray-50 hidden"
-              >
-                Password is required, and must
-                contain 6 characters
-              </p>
-              <a href="">
-                <button
-                  id="loginButton-1"
-                  class="w-36 h-8 bg-main-text rounded text-white text-2xl my-2 hover:bg-hover-btn duration-500"
-                  type="submit"
-                >
-                  LOG IN
-                </button></a
-              >
-            </form>
-          </div>
-          <hr
-            class="border-gray-200 my-auto dark:border-gray-700 mx-8"
-          />
-          <div class="signup-container p-4">
-            <h1
-              class="text-4xl text-center p-3 text-white"
-            >
-              SIGN UP
-            </h1>
-            <form
-              action=""
-              id="signup-form"
-              class="signup-form text-center max-w-xs flex flex-col justify-center m-auto"
-            >
-              <input
-                id="first-name"
-                class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-                placeholder="First name"
-                type="text"
-              />
-              <span
-                id="first-name-error"
-                class="hidden text-sm text-red-500"
-              >
+            </button>
+          </a
+          >
+        </form>
+      </div>
+      <hr
+        class='border-gray-200 my-auto dark:border-gray-700 mx-8'
+      />
+      <div class='signup-container p-4'>
+        <h1
+          class='text-4xl text-center p-3 text-white'
+        >
+          SIGN UP
+        </h1>
+        <form
+          action=''
+          id='signup-form'
+          class='signup-form text-center max-w-xs flex flex-col justify-center m-auto'
+        >
+          <label for='first-name'></label><input
+          id='first-name'
+          class='w-72 h-10 mb-3 rounded p-2 bg-input-color text-white'
+          placeholder='First name'
+          type='text'
+        />
+          <span
+            id='first-name-error'
+            class='hidden text-sm text-red-500'
+          >
                 Please enter your first name</span
-              >
-              <input
-                id="email"
-                class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-                placeholder="Email"
-                type="text"
-              />
-              <span
-                id="email-not-valid"
-                class="hidden text-sm text-red-500"
-              >
+          >
+          <label for='email'></label>
+          <input
+            id='email'
+            class='w-72 h-10 mb-3 rounded p-2 bg-input-color text-white'
+            placeholder='Email'
+            type='text'
+          />
+          <span
+            id='email-not-valid'
+            class='hidden text-sm text-red-500'
+          >
                 Email is not valid must be a valid
                 stud.noroff.no or noroff.no email
                 address
               </span>
-              <span
-                id="email-error"
-                class="hidden text-sm text-red-500"
-              >
+          <span
+            id='email-error'
+            class='hidden text-sm text-red-500'
+          >
                 Email is required
               </span>
-              <input
-                id="password"
-                class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-                placeholder="Password"
-                type="text"
-              />
-              <span
-                id="password-error"
-                class="hidden text-sm text-red-500"
-              >
+          <label for='password'></label><input
+          id='password'
+          class='w-72 h-10 mb-3 rounded p-2 bg-input-color text-white'
+          placeholder='Password'
+          type='text'
+        />
+          <span
+            id='password-error'
+            class='hidden text-sm text-red-500'
+          >
                 Password must be over 6 characters
               </span>
-              <input
-                id="confirm-password"
-                class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
-                placeholder="Confirm Password"
-                type="text"
-              />
-              <span
-                id="confirm-password-matching"
-                class="hidden text-sm text-red-500"
-              >
+          <label for='confirm-password'></label><input
+          id='confirm-password'
+          class='w-72 h-10 mb-3 rounded p-2 bg-input-color text-white'
+          placeholder='Confirm Password'
+          type='text'
+        />
+          <span
+            id='confirm-password-matching'
+            class='hidden text-sm text-red-500'
+          >
                 Passwords doesn't match
               </span>
-              <span
-                id="confirm-password-error"
-                class="hidden text-sm text-red-500"
-              >
+          <span
+            id='confirm-password-error'
+            class='hidden text-sm text-red-500'
+          >
                 Password must be over 6 characters
               </span>
-              <a href="./homepage.html"
-                ><button
-                  class="w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500"
-                >
-                  SIGN IN
-                </button></a
-              >
-            </form>
-            <p
-              id="general-error-message"
-              class="capitalize text-3xl text-yellow-500"
-            ></p>
-          </div>
-        </div>
-      </div>
-    </main>
-    <footer
-      class="p-4 bg-secondary shadow md:px-6 md:py-8 dark:bg-gray-900"
-    >
-      <div
-        class="sm:flex sm:items-center sm:justify-between sm:max-w-lg max-w-screen-lg m-auto"
-      >
-        <a
-          href="#"
-          class="flex items-center mb-4 sm:mb-0"
-        >
-          <span
-            class="self-center text-2xl font-semibold whitespace-nowrap text-main-text"
-            >NERDS</span
+          <a href='./homepage.html'
           >
-        </a>
-        <ul
-          class="flex flex-wrap items-center mb-6 text-sm text-gray-500 sm:mb-0 dark:text-gray-400"
-        >
-          <li>
-            <a
-              href="#"
-              class="mr-4 hover:underline md:mr-6"
-              >About</a
+            <button
+              class='w-36 h-8 bg-main-text rounded text-white text-2xl hover:bg-hover-btn duration-500'
             >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="mr-4 hover:underline md:mr-6"
-              >Privacy Policy</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="mr-4 hover:underline md:mr-6"
-              >Licensing</a
-            >
-          </li>
-          <li>
-            <a href="#" class="hover:underline"
-              >Contact</a
-            >
-          </li>
-        </ul>
+              SIGN IN
+            </button>
+          </a
+          >
+        </form>
+        <p
+          id='general-error-message'
+          class='capitalize text-3xl text-yellow-500'
+        ></p>
       </div>
-      <hr
-        class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8"
-      />
-      <span
-        class="block text-sm text-gray-500 sm:text-center dark:text-gray-400"
-        >© 2022 Christoffer Brendemo. School
+    </div>
+  </div>
+</main>
+<footer
+  class='p-4 bg-secondary shadow md:px-6 md:py-8 dark:bg-gray-900'
+>
+  <div
+    class='sm:flex sm:items-center sm:justify-between sm:max-w-lg max-w-screen-lg m-auto'
+  >
+    <a
+      href='#'
+      class='flex items-center mb-4 sm:mb-0'
+    >
+          <span
+            class='self-center text-2xl font-semibold whitespace-nowrap text-main-text'
+          >NERDS</span
+          >
+    </a>
+    <ul
+      class='flex flex-wrap items-center mb-6 text-sm text-gray-500 sm:mb-0 dark:text-gray-400'
+    >
+      <li>
+        <a
+          href='#'
+          class='mr-4 hover:underline md:mr-6'
+        >About</a
+        >
+      </li>
+      <li>
+        <a
+          href='#'
+          class='mr-4 hover:underline md:mr-6'
+        >Privacy Policy</a
+        >
+      </li>
+      <li>
+        <a
+          href='#'
+          class='mr-4 hover:underline md:mr-6'
+        >Licensing</a
+        >
+      </li>
+      <li>
+        <a href='#' class='hover:underline'
+        >Contact</a
+        >
+      </li>
+    </ul>
+  </div>
+  <hr
+    class='my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8'
+  />
+  <span
+    class='block text-sm text-gray-500 sm:text-center dark:text-gray-400'
+  >© 2022 Christoffer Brendemo. School
         Project.
       </span>
-    </footer>
-    <script
-      type="module"
-      src="./main.js"
-      defer
-    ></script>
-    <script
-      type="module"
-      src="./js/login.js"
-    ></script>
-    <script
-      type="module"
-      src="./js/signup.js"
-    ></script>
-    <!--
-    <script>
-      function Menu(e) {
-        let list = document.querySelector('ul');
-        e.name === 'menu'
-          ? ((e.name = 'close'),
-            list.classList.add('top-[80px]'),
-            list.classList.add('opacity-100'))
-          : ((e.name = 'menu'),
-            list.classList.remove('top-[80px]'),
-            list.classList.remove('opacity-100'));
-      }
-    </script>
-    <script>
-      window.addEventListener(
-        'DOMContentLoaded',
-        () => {
-          const overlay =
-            document.querySelector('#overlay');
-          const openModal =
-            document.querySelector('#modal');
-
-          openModal.addEventListener(
-            'click',
-            () => {
-              overlay.classList.remove('hidden');
-              overlay.classList.add('flex');
-            },
-          );
-        },
-      );
-    </script>
-    <script>
-      const box = document.querySelector('.b');
-
-      document.addEventListener(
-        'click',
-        function (event) {
-          if (event.target.closest('.b'))
-            return box.classList.add('hidden');
-        },
-      );
-    </script>-->
-  </body>
+</footer>
+</body>
 </html>
