added js to profile page and made search bar

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 id="password-input"
                 class="w-72 h-10 rounded my-2 p-2 bg-input-color text-white"
                 placeholder="Password"
-                type="text"
+                type="password"
               />
               <p
                 id="password-error"
@@ -134,7 +134,7 @@
                 id="password"
                 class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
                 placeholder="Password"
-                type="text"
+                type="password"
               />
               <span
                 id="password-error"
@@ -146,7 +146,7 @@
                 id="confirm-password"
                 class="w-72 h-10 mb-3 rounded p-2 bg-input-color text-white"
                 placeholder="Confirm Password"
-                type="text"
+                type="password"
               />
               <span
                 id="confirm-password-matching"
