--- a/profile.html
+++ b/profile.html
@@ -373,7 +373,7 @@
       defer
     ></script>
     <script type="module" src="/main.js" defer></script>
-    <script type="module" src="./js/userPost.js" defer></script>
+    <script type="module" src="./js/profile.js" defer></script>
     <script>
       function Menu(e) {
         let list = document.querySelector('ul');
