--- a/singlePost.html
+++ b/singlePost.html
@@ -1,178 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Vite App</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-  </head>
-  <body class="bg-primary">
-    <header>
-      <div
-        id="nav-bar"
-        class="flex text-sm bg-blue-100"
-      ></div>
-    </header>
 
-    <main>
-      <div class="hidden" id="welcome-name"></div>
-      <div
-        id="main-header"
-        class="post-form hidden items-center m-auto p-5 mt-24"
-      ></div>
-      <div
-        class="style-the-content border-white rounded max-w-screen-sm m-auto"
-      >
-        <div
-          id="single-post"
-          class="single-container mt-24"
-        ></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+  <link rel="stylesheet" href="./style.css" />
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script type="module" src="/main.js" defer></script>
+  <script type="module" src="./js/getPostById.js" defer></script>
+</head>
+<body class="bg-primary">
+  <header>
+    <div id="nav-bar" class="flex text-sm bg-blue-100"></div>
+  </header>
+  <main>
+    <div class="hidden" id="welcome-name"></div>
+    <div id="main-header" class="post-form hidden items-center m-auto p-5 mt-24"></div>
+    <div class="style-the-content border-white rounded max-w-screen-sm m-auto">
+      <div id="single-post" class="single-container mt-24"></div>
 
-        <div
-          class="comments-and-owners divide-y divide-gray-200"
-        >
-          <div
-            class="comments-and-likes flex flew-row justify-between"
-          >
-            <h1 class="text-white">Comments</h1>
-            <button
-              id="post-likes"
-              class="likes text-white mr-10"
-            ></button>
-          </div>
-          <div
-            class="comment-style p-8 mt-2 flex flex-col justify-between"
-          >
-            <div
-              id="post-owner"
-              class="post-owner text-white"
-            ></div>
-            <div
-              id="post-comments"
-              class="single-post-comments text-red-200"
-            ></div>
-          </div>
+      <div class="comments-and-owners divide-y divide-gray-200">
+        <div class="comments-and-likes flex flew-row justify-between">
+          <h1 class="text-white">Comments</h1>
+          <button id="post-likes" class="likes text-white mr-10"></button>
+        </div>
+        <div class="comment-style p-8 mt-2 flex flex-col justify-between">
+          <div id="post-owner" class="post-owner text-white"></div>
+          <div id="post-comments" class="single-post-comments text-red-200"></div>
         </div>
       </div>
-    </main>
-    <footer
-      class="p-4 bg-secondary shadow md:px-6 md:py-8 dark:bg-gray-900"
-    >
-      <div
-        class="sm:flex sm:items-center sm:justify-between sm:max-w-lg max-w-screen-lg m-auto"
-      >
-        <a
-          href="#"
-          class="flex items-center mb-4 sm:mb-0"
-        >
-          <span
-            class="self-center text-2xl font-semibold whitespace-nowrap text-main-text"
-            >NERDS</span
-          >
-        </a>
-        <ul
-          class="flex flex-wrap items-center mb-6 text-sm text-gray-500 sm:mb-0 dark:text-gray-400"
-        >
-          <li>
-            <a
-              href="#"
-              class="mr-4 hover:underline md:mr-6"
-              >About</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="mr-4 hover:underline md:mr-6"
-              >Privacy Policy</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="mr-4 hover:underline md:mr-6"
-              >Licensing</a
-            >
-          </li>
-          <li>
-            <a href="#" class="hover:underline"
-              >Contact</a
-            >
-          </li>
-        </ul>
-      </div>
-      <hr
-        class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8"
-      />
-      <span
-        class="block text-sm text-gray-500 sm:text-center dark:text-gray-400"
-        >© 2022 Christoffer Brendemo. School
-        Project.
-      </span>
-    </footer>
-    <script type="module" src="/main.js"></script>
-    <script>
-      function Menu(e) {
-        let list = document.querySelector('ul');
-        e.name === 'menu'
-          ? ((e.name = 'close'),
-            list.classList.add('top-[80px]'),
-            list.classList.add('opacity-100'))
-          : ((e.name = 'menu'),
-            list.classList.remove('top-[80px]'),
-            list.classList.remove('opacity-100'));
-      }
-    </script>
-    <script>
-      window.addEventListener(
-        'DOMContentLoaded',
-        () => {
-          const overlay =
-            document.querySelector('#overlay');
-          const openModal =
-            document.querySelector('#modal');
-
-          openModal.addEventListener(
-            'click',
-            () => {
-              overlay.classList.remove('hidden');
-              overlay.classList.add('flex');
-            },
-          );
-        },
-      );
-    </script>
-    <script>
-      const box = document.querySelector('.b');
-
-      document.addEventListener(
-        'click',
-        function (event) {
-          if (event.target.closest('.b'))
-            return box.classList.add('hidden');
-        },
-      );
-    </script>
-    <script
-      type="module"
-      src="./js/getPostById.js"
-      defer
-    ></script>
-  </body>
+    </div>
+  </main>
+  <footer class="p-4 bg-secondary shadow md:px-6 md:py-8 dark:bg-gray-900">
+    <div class="sm:flex sm:items-center sm:justify-between sm:max-w-lg max-w-screen-lg m-auto">
+      <a href="#" class="flex items-center mb-4 sm:mb-0">
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-main-text">NERDS</span>
+      </a>
+      <ul class="flex flex-wrap items-center mb-6 text-sm text-gray-500 sm:mb-0 dark:text-gray-400">
+        <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">About</a>
+        </li>
+        <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+        </li>
+        <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+        </li>
+        <li>
+          <a href="#" class="hover:underline">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+    <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2022 Christoffer Brendemo. School
+      Project.
+    </span>
+  </footer>
+</body>
 </html>
