--- a/createPost.html
+++ b/createPost.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
   <script type="module" src="./js/create.js" defer></script>
   <script type="module" src="main.js" defer></script>
-  <title>Document</title>
+  <title>Create post :: Page</title>
 </head>
 <body class="bg-primary">
   <header>
