--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Profile :: Page</title>
   <link rel="stylesheet" href="./style.css" />
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -25,7 +25,7 @@
               <a href="./homepage.html">NERDS</a>
             </span>
             <span class="text-3xl cursor-pointer mx-2 md:hidden block text-white">
-              <ion-icon name="menu" onclick="Menu(this)"></ion-icon>
+              <ion-icon name="menu" id="menu-btn"></ion-icon>
             </span>
           </div>
           <ul
